--- a/Project/pom.xml
+++ b/Project/pom.xml
@@ -52,6 +52,11 @@
 			<artifactId>spring-data-jpa</artifactId>
 			<version>2.4.5</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.11</version>
+		</dependency>
     </dependencies>
 
 	<build>
