--- a/Project/pom.xml
+++ b/Project/pom.xml
@@ -31,6 +31,11 @@
 			<artifactId>hibernate-validator</artifactId>
 			<version>7.0.1.Final</version>
 		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-entitymanager</artifactId>
+			<version>5.4.32.Final</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.security</groupId>
